--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 			<tr>
 				<td></td>
 				<td></td>
-				<td><button id="clrTxt" class="btn btn-danger">C</button></td>
+				<td><button id="clrTxt" class="btn btn-danger" style="background-color: #0d0da7;">C</button></td>
 				<td><button id="del" class="btn btn-default">&#9746;</button></td>
 			</tr>
 
